# DUDEeval

./: LICENSE  README.md  evaluate_submission.py  failure_detection.py  pyproject.toml  scripts.sh
gt/: DUDE_demo_gt.json
submissions/: DUDE_demo_submission_imperfect.json  DUDE_demo_submission_perfect.json
